corrected the text overflow

--- a/Style.css
+++ b/Style.css
@@ -7,7 +7,7 @@ body{
     margin:auto 0;
   }
 .container{
-    border: 3px solid gold;
+    /* border: 3px solid gold; */
     min-height: 99vh;
 }
 @media only screen and (max-width:900px) {
@@ -27,7 +27,7 @@ body{
     text-transform: uppercase;
     font-size: 7vh;
     margin-right: 0vw;
-    border: 3px solid gold;
+    /* border: 3px solid gold; */
 }
 @media only screen and (max-width:900px) {
     .container1{
@@ -51,7 +51,7 @@ body{
     margin-top: -5vh;
     margin-right: 3vw;
     text-align: right;
-    border:3px solid gold;
+    /* border:3px solid gold; */
 }
 @media only screen and (max-width:900px) {
     .container2{
@@ -107,11 +107,10 @@ body{
     row-gap: 0vh;
     column-gap: 2vw;
     min-height: 100vh;
-    max-height: 100vh;
     max-width: 98vw;
     min-width: 90vw;
     background: linear-gradient(to right, #000000f6, #2a0000ef);
-    border: 3px solid rgb(255, 0, 0);
+    /* border: 3px solid rgb(255, 0, 0); */
 }
 @media only screen and (max-width:900px) {
     .container7{
@@ -128,7 +127,7 @@ body{
     grid-column-end: 3 ;
     color: rgb(204, 204, 204);
     font-size: 2vh;
-    padding-top: 18vh;
+    padding-top: 2vh;
     padding-left: 2vw;
     /* border: 3px solid rgb(255, 0, 0); */
 }
@@ -136,7 +135,7 @@ body{
     .container8{
         grid-column-start: 1;
         grid-row-start:1;
-        padding-top: 0vh;
+        padding-top: 10vh;
     }
 }
 .container9{
@@ -214,6 +213,7 @@ a{
 .sunriseimage{
     max-width: auto;
     max-height: 80vh;
+    max-width: 50vw;
 }
 @media only screen and (max-width:900px) {
     .sunriseimage{
